@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.estuary.MaxEd" version="3.1.4" name="Estuary MaxEDITion" provider-name="darkozma, phil65, Ichabod Fletchman">
+<addon id="skin.estuary.MaxEd" version="3.1.5" name="Estuary MaxEDITion" provider-name="darkozma, phil65, Ichabod Fletchman">
 	<requires>
 		<import addon="xbmc.gui" version="5.14.0"/>
-                <import addon="resource.images.skinbackgrounds.clearMod"  version="1.1.5"/>    
+                <import addon="resource.images.skinbackgrounds.clearMod" version="1.1.8"/>
                 <import addon="resource.images.weatherfanart.faded" optional="true"/>
                 <import addon="resource.images.moviegenrefanart.wall-grey" optional="true"/>
                 <import addon="script.extendedinfo" optional="true"/>
                 <import addon="plugin.video.winner"  version="1.0.0"/>
+                <import addon="plugin.video.kodispaintv"  version="2.8.2"/>
+                <import addon="plugin.video.discoveryplus"  version="3.0.0"/>
+                <import addon="plugin.video.balandro"  version="1.5.2"/>
 	</requires>
 	<extension point="xbmc.gui.skin" debugging="false">
 		<res width="1920" height="1440" aspect="4:3" default="false" folder="xml" />
@@ -46,8 +49,9 @@
 			<screenshot>resources/screenshot-09.png</screenshot>
 		</assets>
 		<news>[COLOR blue][B]Skin Estuary uMod2[/B][/COLOR]
-[COLOR green][B]•3.1.4[/B]Add item Menu.[/COLOR]
-[COLOR yellow][B]•3.0.5[/B]MaxEDITion beta.[/COLOR]
+[COLOR green][B]•3.1.5[/B] New Menu.[/COLOR]
+[COLOR yellow][B]•3.1.4[/B] Add item Menu.[/COLOR]
+[COLOR yellow][B]•3.0.5[/B] MaxEDITion beta.[/COLOR]
 [COLOR yellow][B]•2.2.8[/B] Initial beta test.[/COLOR]
 [COLOR yellow][B]•2.2.5[/B] Initial beta.[/COLOR]
 [COLOR yellow][B]•2.0.2[/B] Home modded.[/COLOR]
