@@ -986,20 +986,52 @@
 							<visible>!Skin.HasSetting(HomeMenuNoFavButton)</visible>
 						</item>
 						<item>
-							<label>$LOCALIZE[24001]</label>
-							<property name="menu_id">$NUMBER[8000]</property>
-							<onclick>ActivateWindow(1100)</onclick>
-							<thumb>icons/sidemenu/addons.png</thumb>
-							<property name="id">addons</property>
-							<visible>!Skin.HasSetting(HomeMenuNoProgramsButton)</visible>
+							<label>$LOCALIZE[342]</label>
+							<onclick>ActivateWindow(10025,"plugin://plugin.video.balandro/?ewogICAgImFjdGlvbiI6ICJsaXN0X2FsbCIsIAogICAgImNhdGVnb3J5IjogIkdyYW5Ub3JyZW50IiwgCiAgICAiY2hhbm5lbCI6ICJncmFudG9ycmVudCIsIAogICAgImluZm9MYWJlbHMiOiB7fSwgCiAgICAic2VhcmNoX3R5cGUiOiAibW92aWUiLCAKICAgICJ0aHVtYm5haWwiOiAiL2hvbWUvZGFya296bWEvLmtvZGkvYWRkb25zL3BsdWdpbi52aWRlby5iYWxhbmRyby9yZXNvdXJjZXMvbWVkaWEvY2hhbm5lbHMvdGh1bWIvZ3JhbnRvcnJlbnQuanBnIiwgCiAgICAidGl0bGUiOiAiw5psdGltYXMgcGVsw61jdWxhcyIsIAogICAgInVybCI6ICJodHRwczovL2dyYW50b3JyZW50Lm5sLyIKfQ%3d%3d",return)</onclick>
+							<property name="menu_id">$NUMBER[45030]</property>
+							<thumb>icons/sidemenu/movies.png</thumb>
+							<property name="id">mov</property>
+							<visible>!Skin.HasSetting(HomeMenuNoMovButton)</visible>
+						</item>
+						<item>
+							<label>$LOCALIZE[20343]</label>
+							<onclick>ActivateWindow(10025,"plugin://plugin.video.balandro/?ewogICAgImFjdGlvbiI6ICJsaXN0X2FsbCIsIAogICAgImNhdGVnb3J5IjogIkN1ZXZhbmEgMyIsIAogICAgImNoYW5uZWwiOiAiY3VldmFuYTMiLCAKICAgICJmaWx0cm8iOiAidGFic2VyaWUtMyIsIAogICAgImluZm9MYWJlbHMiOiB7fSwgCiAgICAic2VhcmNoX3R5cGUiOiAidHZzaG93IiwgCiAgICAidGh1bWJuYWlsIjogIi9ob21lL2Rhcmtvem1hLy5rb2RpL2FkZG9ucy9wbHVnaW4udmlkZW8uYmFsYW5kcm8vcmVzb3VyY2VzL21lZGlhL2NoYW5uZWxzL3RodW1iL2N1ZXZhbmEzLnBuZyIsIAogICAgInRpdGxlIjogIlJhbmtpbmciLCAKICAgICJ1cmwiOiAiaHR0cHM6Ly9jdWV2YW5hMy5pby9zZXJpZSIKfQ%3d%3d",return)</onclick>
+							<property name="menu_id">$NUMBER[45020]</property>
+							<thumb>icons/sidemenu/tv.png</thumb>
+							<property name="id">tvs</property>
+							<visible>!Skin.HasSetting(HomeMenuNoTVSButton)</visible>
+						</item>
+						<item>
+							<label>$LOCALIZE[40003]</label>
+							<onclick>ActivateWindow(10025,"plugin://plugin.video.kodispaintv/?fanart=https%3a%2f%2fi.postimg.cc%2fhGX7vS8f%2fKodispaintv-Fanart.jpg&mode=1&name=%5bCOLOR%20red%5d%e2%80%a2%20%5b%2fCOLOR%5d%5bCOLOR%20white%5dCANALES%20DE%20ESPA%c3%91A%5b%2fCOLOR%5d&url=http%3a%2f%2fbit.ly%2fCANALES_DE_ESPANIA",return)</onclick>
+							<property name="menu_id">$NUMBER[45040]</property>
+							<thumb>icons/sidemenu/movistar.png</thumb>
+							<property name="id">liv</property>
+							<visible>!Skin.HasSetting(HomeMenuNoLivButton)</visible>
+						</item>
+						<item>
+							<label>$LOCALIZE[40002]</label>
+							<onclick>ActivateWindow(10025,"plugin://plugin.video.discoveryplus/",return)</onclick>
+							<property name="menu_id">$NUMBER[45010]</property>
+							<thumb>icons/sidemenu/videos.png</thumb>
+							<property name="id">documentals</property>
+							<visible>!Skin.HasSetting(HomeMenuNoDocumentalsButton)</visible>
 						</item>
 						<item>
 							<label>$LOCALIZE[40001]</label>
 							<onclick>ActivateWindow(10025,&quot;plugin://plugin.video.winner/&quot;,return)</onclick>
 							<property name="menu_id">$NUMBER[45000]</property>
 							<thumb>icons/sidemenu/play.png</thumb>
-							<property name="id">Sports</property>
+							<property name="id">sports</property>
 							<visible>!Skin.HasSetting(HomeMenuNoSportsButton)</visible>
+						</item>
+						<item>
+							<label>$LOCALIZE[24001]</label>
+							<property name="menu_id">$NUMBER[8000]</property>
+							<onclick>ActivateWindow(1100)</onclick>
+							<thumb>icons/sidemenu/addons.png</thumb>
+							<property name="id">addons</property>
+							<visible>!Skin.HasSetting(HomeMenuNoProgramsButton)</visible>
 						</item>
 						<item>
 							<label>$LOCALIZE[1]</label>
